z-index changes to prevent users from launching more items from the admin bar while a modal is up (because a modal is... modal)

--- a/public/css/apos-ui/apos-ui-modal.less
+++ b/public/css/apos-ui/apos-ui-modal.less
@@ -5,7 +5,7 @@
   width: 80%;
   max-width: 960px;
   background-color: white;
-  z-index: 900;
+  z-index: 902;
   position: absolute;
 }
 .apos-ui-modal
